--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ documentation = ""
 
 [tool.poetry.dependencies]
 python = "^3.10"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
