--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ repository = "https://github.com/danik-tro/scraper-ci-cd-library"
 homepage = "https://github.com/danik-tro/scraper-ci-cd-library"
 documentation = "https://danik-tro.github.io/scraper-ci-cd-library/"
 
-
+# Dependencies
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.28.1"
@@ -34,6 +34,11 @@ isort = "^5.10.1"
 flake8 = "^4.0.1"
 mypy = "^0.971"
 pre-commit = "^2.20.0"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
 mkdocs = "^1.3.1"
 mkdocstrings = {version = ">=0.18", extras = ["python"]}
 mkdocs-material = "^8.3.9"
