--- a/.github/workflows/ci-lint-pipeline.yml
+++ b/.github/workflows/ci-lint-pipeline.yml
@@ -24,7 +24,7 @@ jobs:
                   virtualenvs-create: true
                   virtualenvs-in-project: true
             - name: Dependencies
-              run: poetry install --no-interaction --no-root --without docs
+              run: poetry install --without docs --no-interaction --no-root
             - name: flake8
               run: |
                   # stop the build if there are Python syntax errors or undefined names
@@ -54,7 +54,7 @@ jobs:
                   virtualenvs-in-project: true
             - name: Dependencies
               run: |
-                  poetry install --no-interaction --no-root --without docs
+                  poetry install --without docs     --no-interaction --no-root
             - name: test
               run: |
                   poetry run pytest -v tests/
