--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,10 @@ black = "^22.6.0"
 isort = "^5.10.1"
 flake8 = "^4.0.1"
 mypy = "^0.971"
+mkdocs = "^1.3.1"
+mkdocstrings = {version = ">=0.18", extras = ["python"]}
+mkdocs-material = "^8.3.9"
+
 pre-commit = "^2.20.0"
 
 [build-system]
