--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ name: Deploy
 
 on:
     push:
+        branches:
+            - master
         tags:
             - v*
 
@@ -23,9 +25,29 @@ jobs:
                   virtualenvs-in-project: true
             - name: Dependencies
               run: |
-                  # Install only docs dependencies
                   poetry install --no-interaction --no-root
             - name: Deploy
               run: |
                   # Deploy to github pages
                   poetry run mkdocs gh-deploy --force --clean --verbose
+    pypi:
+        runs-on: ubuntu-20.04
+        needs: docs
+        steps:
+            - uses: actions/checkout@v2
+            - name: System setup
+              uses: actions/setup-python@v2
+              with:
+                  python-version: 3.10.5
+            - name: Install poetry
+              uses: shok/install-poetry@v1
+              with:
+                  virtualenvs-create: true
+                  virtualenvs-in-project: true
+            - name: Dependencies
+              run: |
+                  poetry install --no-interaction --no-root
+            - name: Deploy
+              run: |
+                  # Deploy to github pages
+                  poetry publish --build -u __token__ -p ${{ secret.PYPITOKEN }}
