--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
               with:
                   python-version: 3.10.5
             - name: Install poetry
-              uses: shok/install-poetry@v1
+              uses: snok/install-poetry@v1
               with:
                   virtualenvs-create: true
                   virtualenvs-in-project: true
